resolved the letter spacing of category

--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -80,7 +80,7 @@ input{
         padding: 13px 13px;
     }
 }
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 800px) {
     .nav-item__home, .nav-item__category{
         display: none;
     }
